Aggiunta paginazione e migliorato infinite scroll

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -204,3 +204,7 @@ body.mobile #form-cart .remove-cart-item {
     display: inline-block;
     margin-right: 1em;
 }
+
+.pagination {
+    width: 100%;
+}
